google sans font not working fix typeshift

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 
   @font-face {
     font-family: 'Google Sans';
-    src: url('Google-Sans-700.ttf') format('ttf');
+    src: url('Google-Sans-700.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
   }
